deploy/local/embedding/envoy-tei.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: tei
          route_config:
            name: local_route
            virtual_hosts:
            - name: tei
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: tei
                  timeout: 300s
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: tei
    connect_timeout: 10s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: tei
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: embedding, port_value: 80 }
